# SolrPyProxy

./: README.md  pyproject.toml
config/: config.yaml
src/: app.py  config_loader.py  main.py
src/api/: app.py  routes.py  schemas.py
src/api/handlers/: base_handler.py  handler_registry.py  health_handler.py  load_handlers.py  solr_handler.py
